--- a/index.css
+++ b/index.css
@@ -33,7 +33,7 @@ button {
     width: 200px;
     margin-bottom: 5px;
     border-radius: 50px;
-    font-family: "Playwrite DE Grund", cursive;
+    font-family: "Playwrite DE Grund", serif;
     font-weight: bold;
 }
 
