--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body {
     background-image: url("/assets/img/bg.png");
-    background-size: 50%;
+    background-size: 500px;
     background-repeat: repeat;
     font-family: "Playwrite DE Grund", serif;
     font-weight: bold;
